tests/unit/language/errors/stack_overflow.arche
// RUN: %arche -o %t %s && %t

func recurse(depth: int) -> int {
  recurse(depth + 1);
  return 0;
}


@allow_pure_proc
proc main() {
  recurse(0);
}
